adapted desigin to be similar as q2a.wbt.wien

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -1,11 +1,122 @@
-body {
-    margin: 1em !important;
+html, body {
+    height: 100%;
 }
 
-h1, h2, h3 {
+body {
+    font-family: 'Open Sans', sans-serif !important;
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    flex: 1 0 auto;
+}
+
+.own-container {
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+header {
+    padding: 5px;
+    min-height: 70px;
+    margin-bottom: 1em;
+}
+
+h2, h3 {
     margin-left: 0 !important;
+    font-weight: 500 !important;
+    line-height: 1.1 !important;
+    color: #337ab7 !important;
+    margin-bottom: 0.7em !important;
 }
 
 label {
     font-weight: bold;
+}
+
+header img {
+    max-height: 70px;
+    display: inline-block;
+}
+
+.header-links {
+    margin-top: 1.5em;
+    display: inline-block;
+}
+
+.header-links a {
+    margin-right: 0.5em;
+    color: #000;
+    opacity: 0.8;
+    font-weight: bold;
+    height: 100%;
+}
+
+@media (max-width: 768px) {
+    .header-links {
+        margin: 0.5em 0;
+    }
+}
+
+@media (min-width: 768px) {
+    header a.first-link {
+        margin-left: 5em;
+    }
+}
+
+main {
+    border-top: 1px solid whitesmoke;
+    padding-top: 1em;
+    padding-bottom: 5em;
+}
+
+.row {
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+footer .row {
+    margin-bottom: 2em;
+}
+
+.tagButton {
+    border: none !important;
+}
+
+button {
+    cursor: pointer;
+}
+
+footer {
+    flex-shrink: 0;
+    width: 100%;
+    background-color: #333333;
+    color: #c4c4c4;
+    font-size: 16px;
+}
+
+.footer-content {
+    padding: 2em 0;
+    height: 100%;
+}
+
+footer a, footer a:hover {
+    color: #c4c4c4;
+    font-size: 16px;
+    line-height: 1.42857143;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+footer li {
+    padding: 0 15px 5px 0;
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
