--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -14,6 +14,11 @@ body {
     width: 100%;
 }
 
+.container {
+    max-width: 1170px !important;
+    margin: auto !important;
+}
+
 *:focus, header a:focus img {
     outline: none !important;
     box-shadow: 0 0 3pt 2pt orange !important;
@@ -29,4 +34,24 @@ h2, h3 {
     line-height: 1.1 !important;
     color: #337ab7 !important;
     margin-bottom: 0.7em !important;
+}
+
+.row {
+    margin-bottom: 1em;
+}
+
+button {
+    cursor: pointer;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
+
+.btn-primary:hover, .btn-primary:focus {
+    color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
 }
