--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -26,6 +26,8 @@ body {
 
 .tagButton {
     border: none !important;
+    padding: 0 5px 0 5px !important;
+    margin: 2px !important;
 }
 
 h2, h3 {
